# wikipedia-gdp-crawler

./: .gitignore  Makefile  README.md  demo.py  gdp_data.json  output_data.json  pyproject.toml
src/: cli.py  crawler.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_cli.py  test_crawler.py  test_models.py  test_parser.py
